Trial card interaction icons. Fix drag overflow to workspace

--- a/style.css
+++ b/style.css
@@ -97,6 +97,9 @@ body {
   grid-area: overflow;
   overflow-x: scroll;
   padding: 10px 0;
+  border-color: var(--highlight-color);
+  border-style: solid;
+  border-width: 3px;
   border-radius: 10px;
 }
 
@@ -142,7 +145,13 @@ body {
   background: var(--highlight-color);
 }
 
-
+.material-symbols-rounded {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
 
 #phrase {
   width: 100%;
@@ -205,10 +214,17 @@ body {
 .card-control > .top {
   grid-area: top;
   cursor: pointer;
+  position: relative;
 }
 
 :hover.top {
   background: radial-gradient(ellipse at top, skyblue 20%, rgba(70,159,252,0.006061799719887961) 75%);
+  content: url(graphics/sync_FILL0_wght400_GRAD0_opsz48.svg);
+  top: -80%;
+  left: 20%;
+  position: absolute;
+  width: 60%;
+  z-index: 10;
 }
 
 .card-control > .right {
@@ -217,7 +233,14 @@ body {
 }
 
 :hover.right {
-  background: radial-gradient(ellipse at right, skyblue 20%, rgba(70,159,252,0.006061799719887961) 75%);
+  /* background: radial-gradient(ellipse at right, skyblue 20%, rgba(70,159,252,0.006061799719887961) 75%); */
+  content: url(graphics/sync_FILL0_wght400_GRAD0_opsz48.svg);
+  left: -100%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(90deg);
+  width: 270%;
+  z-index: 10;
 }
 
 .card-control > .bottom {
@@ -226,7 +249,13 @@ body {
 }
 
 :hover.bottom {
-  background: radial-gradient(ellipse at bottom, skyblue 20%, rgba(70,159,252,0.006061799719887961) 75%);
+  /* background: radial-gradient(ellipse at bottom, skyblue 20%, rgba(70,159,252,0.006061799719887961) 75%); */
+  content: url(graphics/sync_FILL0_wght400_GRAD0_opsz48.svg);
+  top: -140%;
+  left: 20%;
+  position: absolute;
+  width: 60%;
+  z-index: 10;
 }
 
 .card-control > .left {
@@ -235,7 +264,14 @@ body {
 }
 
 :hover.left {
-  background: radial-gradient(ellipse at left, skyblue 20%, rgba(70,159,252,0) 75%);
+  /* background: radial-gradient(ellipse at left, skyblue 20%, rgba(70,159,252,0) 75%); */
+  content: url(graphics/sync_FILL0_wght400_GRAD0_opsz48.svg);
+  left: -70%;
+  position: absolute;
+  display: inline-block;
+  transform: rotate(90deg);
+  width: 270%;
+  z-index: 10;
 }
 
 .card-control > .center {
@@ -244,7 +280,13 @@ body {
 }
 
 :hover.center {
-  background: radial-gradient(ellipse at center , rgba(135, 206, 235, 0.5) 30%, rgba(70,159,252,0) 70%);
+  /* background: radial-gradient(ellipse at center , rgba(135, 206, 235, 0.5) 30%, rgba(70,159,252,0) 70%); */
+  content: url(graphics/play_arrow_FILL0_wght400_GRAD0_opsz48.svg);
+  top: -10%;
+  left: 10%;
+  position: absolute;
+  width: 70%;
+
 }
 
 svg {
@@ -267,7 +309,6 @@ svg {
   align-content: space-around;
   overflow-y: scroll;
 }
-
 
 
 .phrase {
